hpa.yaml
apiVersion: autoscaling/v2
kind: HorizontalPodAutoscaler
metadata:
 name: my-app-hpa
 namespace: my-namespace
spec:
 scaleTargetRef:
  apiVersion: apps/v1
  kind: Deployment 
  name: nginxstrategydeployment
 minReplicas: 2
 maxReplicas: 10
 metrics:
 - type: Resource
   resource:
     name: cpu 
     target: 
      type: Utilization
      averageUtilization: 70
