nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: nginxpod
 labels:
  app: nginx

spec:
 containers:
 - name: nginxcontainer
   image: nginx:latest
   ports:
   - containerPort: 80
   limit:
