nodeaffinitypod.yaml
# In this configuration we have labelled the node already and passing values in match expression
# kubectl lable nodes node_name key=value
# node affintiy have two type of requirments(soft and hard), below example belongs to "hard requirement"

apiVersion: v1 
kind: Pod 
metadata:
 name: node-affinity

spec:
  containers:
    - name: node-affinity-container
      image: redis:latest
  affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
       nodeSelectorTerms:
         - matchExpressions:
             - key: disk
               operator: In 
               values: 
               - ssd
