statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata: 
 name: my-statefulset
spec:
 serviceName: "nginx"
 replicas: 2
 selector:
  matchLabels:
   app: nginx
 template:
  metadata:
    labels:
      app: nginx
  spec:
   containers:
   - name: nginx
     image: nginx:latest
     ports:
     - containerPort: 80
     volumeMounts: 
     - name: www
       mountPath: /usr/share/nginx/html
 volumeClaimTemplates:
 - metadata:
     name: www
   spec: 
     accessModes: ["ReadWriteOnce"]
     storageClassName: "standard"
     resources:
      requests:
        storage: 1Gi
