nginxpodservice.yaml
apiVersion: v1
kind: Service 
metadata:
 name: nginxloadbalancerservice

spec:
 selector:
  app: nginx
 type: LoadBalancer
 ports:
 - protocol: TCP
   port: 80
   targetPort: 80
