ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
 name: example-ingress
 namespace: default
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /

spec:
 rules: 
 - host: example.com
   http:
    paths: 
    - path: /service1
      pathType: Prefix 
      backend: 
       service:
        name: service1
        port: 
         number: 80

    - path: /service2
      pathType: Prefix
      backend:
       service:
        name: service2 
        port: 
         number: 80

 tls:
 - hosts:
   - example.com
   secretName: tls-secret
